End of spring semester 2018

--- a/ParallelsInGeometry/1166-SupplementalProblems.tex
+++ b/ParallelsInGeometry/1166-SupplementalProblems.tex
@@ -1,9 +1,11 @@
 \newpage
 
-\section{Math 1166: Final Exam Review, Draft 2017}
+\section{Math 1166: Final Exam Review, Draft 2018}
 
 Note:  The final exam is cumulative, so be sure to include the \textbf{previous midterm review documents} as part of your review.  
-Since the second midterm, we have covered Sections 5.3, 5.4 (except 5.4.4), 6.1 and 6.2 from your notes as well as Activities A.36 -- A.48, except A.46.  Below is a summary of that content.  
+Since the second midterm, we will have covered Sections 5.3, 5.4 (except 5.4.4), 6.1 and 6.2 from your notes as well as Activities A.36 -- A.48, except A.46.  Below is a summary of that content.  
+
+Some of the following problems (as well as a few others) will be part of an online supplementary review, available by Reading Day.  
 
 % A.40.Reading Information from a Graph
 % A.41. Parametric Equations
@@ -234,7 +236,7 @@ formula, and your final answer should start with ``$y = $''.
 Comparing Celsius and Fahrenheit.  
 \begin{enumerate}
 \item Water freezes at $0^\circ$ C, which is $32^\circ$ F.  Water boils at $100^\circ$ C, which is $212^\circ$ F.  Use this information to derive a Celsius to Fahrenheit conversion formula.  
-\item Suppose the temperature of a model house increases from $24^\circ$ C to $30^\circ$ X, which seems to be a $25\%$ increase.  Convert these temperatures to Fahrenheit and compute the percent change in degrees Fahrenheit. 
+\item Suppose the temperature of a model house increases from $24^\circ$ C to $30^\circ$ C, which seems to be a $25\%$ increase.  Convert these temperatures to Fahrenheit and compute the percent change in degrees Fahrenheit. 
 \item Use your conversion formula to explain why the percent changes are not the same in Fahrenheit as in Celsius.  
 \end{enumerate}
 \end{prob}
@@ -260,7 +262,7 @@ Volume of a cylinder.
 
 
 \begin{prob}
-Standard televisions usually have an aspect ratio (width:length) of 4:3.  Wide-screen televisions have an aspect ratio of 16:9.  Brad's first wide-screen television was a 36 inch (diagonal) model.  Although the new television was clearly wider than the 27 inch (diagonal) standard television it replaced, he was surprised that it did not seem taller than the old television.  Which television was actually taller?  And by how much?  Explain your reasoning.   
+Standard televisions usually have an aspect ratio (width:length) of 4:3.  Wide-screen televisions have an aspect ratio of 16:9.  Brad's first wide-screen television was a 36 inch (diagonal) model.  Although the new television was clearly wider than the 27 inch (diagonal) standard television it replaced, he was surprised that it did not seem taller than the old television.  Which television was actually taller or shorter?  By how much?  Explain your reasoning.   
 \end{prob}
 
 \begin{prob}
@@ -271,10 +273,10 @@ Given an equation of a line in standard form, $ax+by=c$:
 \end{enumerate}
 \end{prob}
 
-\begin{prob}
-Using the picture below, prove that if two non-vertical lines are perpendicular, the product of their slopes is $-1$.   You may assume that $x$ and $y$ are horizontal and vertical axes, respectively; that lines $j$ and $k$ are perpendicular and that $j$ has positive slope; that the segments of length $a$ and $c$ are vertical and collinear; and that the segment of length $b$ is horizontal.   
-$$\includegraphics[width=2.5in]{../graphics/perpendicularSlopes.pdf}$$
-\end{prob}
+%\begin{prob}
+%Using the picture below, prove that if two non-vertical lines are perpendicular, the product of their slopes is $-1$.   You may assume that $x$ and $y$ are horizontal and vertical axes, respectively; that lines $j$ and $k$ are perpendicular and that $j$ has positive slope; that the segments of length $a$ and $c$ are vertical and collinear; and that the segment of length $b$ is horizontal.   
+%$$\includegraphics[width=2.5in]{../graphics/perpendicularSlopes.pdf}$$
+%\end{prob}
 
 %\subsection*{Questions to be added}
 %\begin{enumerate}
