--- a/ParallelsInGeometry/1166-midterm.tex
+++ b/ParallelsInGeometry/1166-midterm.tex
@@ -1,6 +1,6 @@
 \newpage
 
-\section{Midterm 1 Review}
+\section{Midterm 1 Review, 2/19/18}
 Midterm Exam 1 will cover Chapters 1 -- 3 (except section 1.2 and the angle trisection part of 3.1) and activities A.1 -- A.18.  We did not complete all of these activities in class so you will need to fill in some gaps.  
 \subsection{Review Ideas}
 
@@ -33,51 +33,48 @@ Midterm Exam 1 will cover Chapters 1 -- 3 (except section 1.2 and the angle tris
 
 \subsection*{Review Problems}
 \begin{prob}
-Describe Euclid's (compass and straightedge) construction for an equilateral triangle, and explain
-why it works.
+Demonstrate and describe Euclid's (compass and straightedge) construction for an equilateral triangle.  Explain
+why it works.\marginnote{What about a square or a regular hexagon?}
 \end{prob}
 
 \begin{prob}
-Use the picture below to show that a pair of medians intersects at a point 2/3 of the way from the vertex to the opposite side.  Then use that fact to argue that the three medians must be concurrent.  
-$$\includegraphics[width=2.5in]{../graphics/median1.pdf}$$
+Maddie had an idea for proving that the sum of the interior angles in a triangle is $180^\circ$:  Given $\triangle ABC$, draw a line through $C$ parallel to $\overline{AB}$.  Finish Maddie's proof.\marginnote{What were the approaches we used in class?}  
+\[
+\includegraphics{../graphics/triangleAngleSum.png}
+\]
 \end{prob}
 
 \begin{prob}
-Prove that the points on an angle bisector are \emph{exactly those} that are equidistant from the sides of the angle. 
+Use the picture below to show that a pair of medians intersects at a point 2/3 of the way from the vertex to the opposite side.  Then use that fact to argue that the three medians must be concurrent.
+\[
+\includegraphics[width=2.5in]{../graphics/median1.pdf}
+\]
+\end{prob}
+
+\begin{prob}
+Prove that the points on an angle bisector are \emph{exactly those} that are equidistant from the sides of the angle.\marginnote{What about the perpendicular bisectors?}
+\end{prob}
+
+\begin{prob}
+Prove that the perpendicular bisectors of a triangle are concurrent.\marginnote[\baselineskip]{What about the angle bisectors?}
 \end{prob}
 
 \begin{prob}
 Construct a $30$-$60$-$90$ right triangle. Explain the steps in your
-  construction and how you know it works.
+ construction and how you know it works.\marginnote{What about a $45$-$45$-$90$ triangle?}
+\end{prob}
+
+%\begin{prob}
+%Construct a $45$-$45$-$90$ right triangle. Explain the steps in your
+%  construction and how you know it works.
+%\end{prob}
+
+\begin{prob}
+Where is the orthocenter of a right triangle?  Explain your reasoning.  What about the circumcenter?  Again, explain your reasoning.\marginnote{What about the other centers of a right triangle?}
 \end{prob}
 
 \begin{prob}
-Construct a $45$-$45$-$90$ right triangle. Explain the steps in your
-  construction and how you know it works.
-\end{prob}
-
-\begin{prob}
-Where is the orthocenter of a right triangle?  Explain your reasoning.  What about the circumcenter?  Again, explain your reasoning. 
-\end{prob}
-
-\begin{prob}
-Show that, given any three non-collinear points in the Euclidean plane, there is a unique circle passing through the three points.
-\end{prob}
-
-\begin{prob}
-Prove: A radius that is perpendicular to a chord bisects the chord. 
-\end{prob}
-
-\begin{prob}
-Prove:  A radius that bisects a chord is perpendicular to the chord. 
-\end{prob}
-
-\begin{prob}
-Given a circle, give a construction that finds its center.
-\end{prob}
-
-\begin{prob}
-State and prove a condition about the angles of any quadrilateral that is inscribed in a circle.  
+Show that, given any three non-collinear points in the Euclidean plane, there is a unique circle passing through the three points.\marginnote{What about four points?}
 \end{prob}
 
 \begin{prob}
@@ -89,26 +86,48 @@ Give an informal derivation of the relationship between the circumference and ar
 \end{prob}
 
 \begin{prob}
-Prove:  If a quadrilateral is a parallelogram, then opposite sides are congruent.
+Complete the following statement:  When a quadrilateral is inscribed in a circle, opposite angles are \dots. 
+Now prove the statement.  
 \end{prob}
 
 \begin{prob}
-Prove:  If opposite sides of a quadrilateral are congruent, then it is a parallelogram.
-\end{prob}
-
-\begin{prob}
-Claim:  The diagonals of a rhombus are perpendicular. 
+Claim:  A radius that is perpendicular to a chord bisects the chord.
 \begin{enumerate}
-\item Prove the claim. 
+\item Prove the claim.\marginnote{Use this problem structure for other problems.}
 \item State the converse of the claim. 
-\item Is the converse true?  If so, prove it.  If not, ``salvage it'' to make a true statement, and prove it.  
+\item Is the converse true?  If not, give a counterexample.  
+\item If the converse is true, prove it.  If the converse is false, ``salvage it'' to make a true statement, and prove it.
 \end{enumerate}
 \end{prob}
 
+\begin{prob}
+State and prove the isosceles triangle theorem.\marginnote{What about the converse?}
+\end{prob}
 
 \begin{prob}
-Draw an arbitrary convex quadrilateral.  Form a second quadrilateral by connecting the midpoints of the sides 
-of the first quadrilateral.  You will find that the second quadrilateral is a special quadrilateral.  Make a conjecture about the second quadrilateral and prove it.  
+State and prove the Pythagorean theorem.\marginnote{What about the converse?}
+\end{prob}
+
+\begin{prob}
+Prove:  Opposite sides of a parallelogram are congruent.\marginnote{What about the converse?}
+\end{prob}
+
+\begin{prob}
+Prove:  The diagonals of a rhombus are perpendicular.\marginnote{What about the converse?}
+\end{prob}
+
+\begin{prob}
+Prove:  The diagonals of a rectangle are congruent.\marginnote{What about the converse?}
+\end{prob}
+
+\begin{prob}
+Given a circle, give a construction that finds its center.  Explain why it works.  
+\end{prob}
+
+\begin{prob}
+Draw an arbitrary convex quadrilateral.  Form a second quadrilateral by connecting the 
+midpoints of the sides of the first quadrilateral.  You will find that the second quadrilateral 
+is a special quadrilateral.  Make a conjecture about the second quadrilateral and prove it.  
 \end{prob}
 
 \begin{prob}
@@ -132,6 +151,6 @@ The figure below illustrates a construction given an angle $\theta$ and a segmen
 \begin{enumerate}
 %\item Mark the diagram and state what must be true about the construction so that $\angle\alpha=\angle\beta$. 
 \item Prove that $\angle\theta=\angle\beta$. 
-\item What will happen to $\angle\beta$ if point $X$ is moved over to point $Y$?
+\item What will happen to $\angle\beta$ if point $X$ is moved over to point $Y$?  Say how you know.  
 \end{enumerate}
 \end{prob}
