--- a/ParallelsInGeometry/1166-midterm2.tex
+++ b/ParallelsInGeometry/1166-midterm2.tex
@@ -53,12 +53,21 @@ David proudly owns a 42 inch (measured diagonally) flat screen
 \end{enumerate}
 \end{prob}
 
+%\begin{prob}
+%Right triangle trigonometry.  
+%\begin{enumerate}
+%\item Suppose $\alpha$ is in the second quadrant and $\sin\alpha = 3/4$.  Find $\cos\alpha$ and $\tan\alpha$.
+%\item Suppose $\beta$ is in the third quadrant and $\cos\beta = -2/3$.  Find $\sin\beta$ and $\tan\beta$.
+%\item Suppose $\gamma$ is in the fourth quadrant and $\tan\gamma = -2/3$.  Find $\sin\gamma$ and $\cos\gamma$.
+%\end{enumerate}
+%\end{prob}
+
 \begin{prob}
-Right triangle trigonometry.  
+Right triangle trigonometry: $\alpha$, $\beta$, and $\gamma$ are acute angles.  
 \begin{enumerate}
-\item Suppose $\alpha$ is in the second quadrant and $\sin\alpha = 3/4$.  Find $\cos\alpha$ and $\tan\alpha$.
-\item Suppose $\beta$ is in the third quadrant and $\cos\beta = -2/3$.  Find $\sin\beta$ and $\tan\beta$.
-\item Suppose $\gamma$ is in the fourth quadrant and $\tan\gamma = -2/3$.  Find $\sin\gamma$ and $\cos\gamma$.
+\item Suppose $\sin\alpha = 3/4$.  Find $\cos\alpha$ and $\tan\alpha$.
+\item Suppose $\cos\beta = 2/3$.  Find $\sin\beta$ and $\tan\beta$.
+\item Suppose $\tan\gamma = 2/3$.  Find $\sin\gamma$ and $\cos\gamma$.
 \end{enumerate}
 \end{prob}
 
@@ -100,7 +109,7 @@ Brenah is drinking fruit punch from a glass shaped like an inverted cone.  Suppo
 \begin{prob}
 A cup has a circular opening, a circular base, and circular cross sections at every height parallel to the base.  The opening has a diameter of 9 cm, the base has a diameter of 6 cm, and the cup is 12 cm high.  
 What is the volume of the cup?  Explain your reasoning.  
-If the cup is filled to half its height, what fraction of the cup's volume is filled?  Explain your reasoning.  
+% If the cup is filled to half its height, what fraction of the cup's volume is filled?  Explain your reasoning.  
 \end{prob}
 
 \begin{prob}
