--- a/ParallelsInGeometry/4407-exam.tex
+++ b/ParallelsInGeometry/4407-exam.tex
@@ -37,15 +37,15 @@ The exam will sample from Chapters 1 -- 4 and Activities 1--32 and 38 of your co
 \item Know how to define similarity in terms of dilations and basic rigid motions.  
 \item Know and be able to use criteria for congruence and similarity of triangles.  
 \item Know how to use transformations  to describe symmetries of figures, including tessellations.  
-\item Know the focus and directrix definition of parabola and be able to use it in both synthetic and analytic geometry.
+%\item Know the focus and directrix definition of parabola and be able to use it in both synthetic and analytic geometry.
 \item Know the definition of circle and be able to use it in both synthetic and analytic geometry.
 \item Be aware of assumptions underlying Euclidean geometry and how those assumptions can be different in other geometries (such as spherical geometry).  
 \item Use similarity to find missing lengths by reasoning from the scale factor or from within-figure comparisons.   
 \item Understand right-triangle trigonometry as similarity, and use trigonometry to solve problems.  (See activity A.27 for a review.)
-\item Reason about length, area, and volume in similarity situations.  How are rep-tiles related to this question?  
-\item Use shearing and Cavalieri's principle to reason about area and volume.  
-\item If you know the area of a rectangle, what can you say about its perimeter?  What about more general figures?  
-\item If you know the perimeter of a rectangle, what can you say about its area?  What about more general figures? 
+%\item Reason about length, area, and volume in similarity situations.  How are rep-tiles related to this question?  
+%\item Use shearing and Cavalieri's principle to reason about area and volume.  
+%\item If you know the area of a rectangle, what can you say about its perimeter?  What about more general figures?  
+%\item If you know the perimeter of a rectangle, what can you say about its area?  What about more general figures? 
 
 \end{itemize}
 
@@ -95,7 +95,7 @@ Given a circle, give a construction that finds its center.
 \end{prob}
 
 \begin{prob}
-State and prove a condition about the angles of any quadrilateral that is inscribed in a circle.  
+State and prove a condition about the opposite angles of any quadrilateral that is inscribed in a circle.  
 \end{prob}
 
 \begin{prob}
@@ -176,18 +176,18 @@ Explain how the picture ``proves'' the following statements:
 %\end{enumerate}
 %\end{prob}
 
-\begin{prob}
-A typical adult male gorilla is about 5.5 feet tall and weighs about 400 pounds. Suppose King Kong was about 22 feet tall and proportioned like a typical adult male gorilla.
-\begin{enumerate}
-\item Write an expression that approximates King Kong's weight. Briefly explain your reasoning.
-\item The circumference of the neck of a typical adult male gorilla is 36 inches. Approximately what would be the circumference of King Kong's neck? Briefly explain your reasoning.
-\item Suppose an Ohio State sweatshirt for a typical adult male gorilla requires 3 square yards of fabric.  Approximately how much fabric would be required for an Ohio State sweatshirt for King Kong?  Briefly explain your reasoning.
-\end{enumerate}
-\end{prob}
-
-\begin{prob}
-Brenah is drinking fruit punch from a glass shaped like an inverted cone.  Suppose the glass has a height 5 in. and a base of radius 2 in.  What is the volume of the glass?  What is the height of the fruit punch when the glass is half full?  Generalize your result for any glass shaped like an inverted cone.  
-\end{prob}
+%\begin{prob}
+%A typical adult male gorilla is about 5.5 feet tall and weighs about 400 pounds. Suppose King Kong was about 22 feet tall and proportioned like a typical adult male gorilla.
+%\begin{enumerate}
+%\item Write an expression that approximates King Kong's weight. Briefly explain your reasoning.
+%\item The circumference of the neck of a typical adult male gorilla is 36 inches. Approximately what would be the circumference of King Kong's neck? Briefly explain your reasoning.
+%\item Suppose an Ohio State sweatshirt for a typical adult male gorilla requires 3 square yards of fabric.  Approximately how much fabric would be required for an Ohio State sweatshirt for King Kong?  Briefly explain your reasoning.
+%\end{enumerate}
+%\end{prob}
+%
+%\begin{prob}
+%Brenah is drinking fruit punch from a glass shaped like an inverted cone.  Suppose the glass has a height 5 in. and a base of radius 2 in.  What is the volume of the glass?  What is the height of the fruit punch when the glass is half full?  Generalize your result for any glass shaped like an inverted cone.  
+%\end{prob}
 
 %\begin{prob}
 %A cup has a circular opening, a circular base, and circular cross sections at every height parallel to the base.  The opening has a diameter of 9 cm, the base has a diameter of 6 cm, and the cup is 12 cm high.  
@@ -196,7 +196,7 @@ Brenah is drinking fruit punch from a glass shaped like an inverted cone.  Suppo
 %\end{prob}
 
 \begin{prob}
-Suppose you use a photocopier to enlarge a figure to 125\% of its original size.  What is the scale factor of the enlargement?  What happens to areas under the enlargement?  If you lost the original figure, what reduction percentage would you use on the enlargment to create a figure congruent to the original?  What is the scale factor for the reduction?  
+Suppose you use a photocopier to enlarge a figure to 125\% of its original size.  What is the scale factor of the enlargement?  What happens to areas under the enlargement?  If you lost the original figure, what reduction percentage would you use on the enlargement to create a figure congruent to the original?  What is the scale factor for the reduction?  
 \end{prob}
 
 \begin{prob}
@@ -233,9 +233,6 @@ Explain how the following picture ``proves'' the Pythagorean Theorem.
 %Explain how the formula for the volume of a sphere follows from the formula for the volume of a cone and Cavalieri's Principle.
 %\end{prob}
 %
-\begin{prob}
-Give an informal derivation of the relationship between the circumference and area of a circle. 
-\end{prob}
 
 \begin{prob}
 Given a figure and a rotation of that figure, find the center and angle of rotation.  
@@ -251,13 +248,13 @@ $$\includegraphics[scale=0.6]{../graphics/means}$$
 \end{enumerate}
 \end{prob}
 
-\begin{prob}
-If the perimeter of a rectangle is 20 feet, what is the most one can say about the rectangle's area?  If the perimeter of any simple closed 2-dimensional shape is 20 feet, what is the most anyone can say about its area?
-\end{prob}
-
-\begin{prob}
-If the surface area of a rectangular prism is 20 square feet, what is the most one can say about the prism's volume?  If the surface area of any simple closed 3-dimensional shape is 20 square feet, what is the most one can say about its volume? 
-\end{prob}
+%\begin{prob}
+%If the perimeter of a rectangle is 20 feet, what is the most one can say about the rectangle's area?  If the perimeter of any simple closed 2-dimensional shape is 20 feet, what is the most anyone can say about its area?
+%\end{prob}
+%
+%\begin{prob}
+%If the surface area of a rectangular prism is 20 square feet, what is the most one can say about the prism's volume?  If the surface area of any simple closed 3-dimensional shape is 20 square feet, what is the most one can say about its volume? 
+%\end{prob}
 
 %\begin{prob}
 %Why do cute furry animals curl up to stay warm in the winter?  Why are most ugly desert reptiles long and skinny?
@@ -333,10 +330,10 @@ If the surface area of a rectangular prism is 20 square feet, what is the most o
 %same length.
 %\end{prob}
 
-\begin{prob}
-Use a general (non-special) triangle to explain why every triangle is a rep-4-tile.  
-Use the same triangle to explain why every triangle tessellates the plane.  Then use your tessellation to explain why every triangle is a rep-$n^2$-tile for any positive integer $n$. 
-\end{prob}
+%\begin{prob}
+%Use a general (non-special) triangle to explain why every triangle is a rep-4-tile.  
+%Use the same triangle to explain why every triangle tessellates the plane.  Then use your tessellation to explain why every triangle is a rep-$n^2$-tile for any positive integer $n$. 
+%\end{prob}
 
 \begin{prob} 
 Concurrency of angle bisectors. 
