As sent to printing, December 2018.

--- a/ParallelsInGeometry/ParallelsInGeometry.tex
+++ b/ParallelsInGeometry/ParallelsInGeometry.tex
@@ -6,6 +6,7 @@
 %\usepackage{citeref}
 \usepackage{teacherEd}
 
+
 \usepackage{framed}
 \usepackage{comment}
 
@@ -25,7 +26,7 @@
 
 \title{Parallels \\ in Geometry}
 \author{\teachingnotes}
-\publisher{Math 1166:  Spring 2018 \\ This document was typeset on \today.}
+\publisher{Math 1166:  Spring 2019 \\ This document was typeset on \today.}
 %\date{}
 
 
@@ -119,6 +120,7 @@
 \input{../chapters/appendix/moreMedians}
 %\input{../chapters/appendix/perpendicularBisector}  % Coordinate proof that perpendicular bisectors are concurrent.
 \input{../chapters/appendix/constructibleNumbers}
+\input{../chapters/appendix/constructibleNumbers2}
 \input{../chapters/appendix/impossibilities}
 
 
