--- a/ParallelsInGeometry/ParallelsInGeometrySupplements.tex
+++ b/ParallelsInGeometry/ParallelsInGeometrySupplements.tex
@@ -52,7 +52,7 @@
 \chapter{Supplemental Activities}
 
 %\setcounter{page}{1}
-\setcounter{section}{51}
+\setcounter{section}{50}
 
 
 % Activities in draft form or to be developed
@@ -70,7 +70,7 @@
 %\input{../chapters/appendix/quadDiagonals2}  % replace other version
 %\input{../chapters/appendix/linesInTriangles}
 
-\input{../chapters/appendix/constructibleNumbers2}
+%\input{../chapters/appendix/constructibleNumbers2}
 
 %  Unused activities
 
