--- a/ParallelsInGeometry/teacherEd.sty
+++ b/ParallelsInGeometry/teacherEd.sty
@@ -16,7 +16,10 @@
 \RequirePackage[framemethod=TikZ]{mdframed}
 \RequirePackage{environ}
 %\RequirePackage{xkeyval}
-\RequirePackage{tikz}
+%\RequirePackage{tikz}
+\usepackage{pgf,tikz}
+\usepackage{mathrsfs}
+\usetikzlibrary{arrows}
 %\RequirePackage{amssymb}
 \RequirePackage{amsmath}
 \RequirePackage{mathtools} %% trying to get cases to work in caption
