--- a/ParallelsInGeometry/1166-midterm.tex
+++ b/ParallelsInGeometry/1166-midterm.tex
@@ -1,6 +1,6 @@
 \newpage
 
-\section{Midterm 1 Review, 2/19/18}
+\section{Midterm 1 Review, draft 02/08/19}
 Midterm Exam 1 will cover Chapters 1 -- 3 (except section 1.2 and the angle trisection part of 3.1) and activities A.1 -- A.18.  We did not complete all of these activities in class so you will need to fill in some gaps.  
 \subsection{Review Ideas}
 
