Added some end-of-semester review problems.

--- a/ParallelsInGeometry/1166-SupplementalProblems.tex
+++ b/ParallelsInGeometry/1166-SupplementalProblems.tex
@@ -1,9 +1,9 @@
 \newpage
 
-\section{Math 1166: Final Exam Review, Draft 2018}
+\section{Math 1166: Final Exam Review, Draft 2019}
 
 Note:  The final exam is cumulative, so be sure to include the \textbf{previous midterm review documents} as part of your review.  
-Since the second midterm, we will have covered Sections 5.3, 5.4 (except 5.4.4), 6.1 and 6.2 from your notes as well as Activities A.36 -- A.48, except A.46.  Below is a summary of that content.  
+Since the second midterm, we will have covered Sections 5.3, 6.1 and 6.2 from your notes as well as Activities A.36 -- A.49, except A.38 and A.46.  Below is a summary of that content.  
 
 Some of the following problems (as well as a few others) will be part of an online supplementary review, available by Reading Day.  
 
@@ -272,6 +272,24 @@ Given an equation of a line in standard form, $ax+by=c$:
 \item Explain why efficient the method works. 
 \end{enumerate}
 \end{prob}
+
+\begin{prob}
+Below is a figure that illustrates part of Euclid's proof of the Pythagorean Theorem.  You may assume the following: 
+\begin{itemize}
+\item All  angles that appear to be right angles are indeed right.
+\item $FB=BA$ and $BD=BC$. 
+\item $\triangle ABD \cong \triangle FBC$.  
+\end{itemize}
+\[
+\includegraphics[scale=0.25]{../graphics/Euclid_Pythagorean_theorem3.PNG}
+\]
+\begin{enumerate}
+\item Why is the area of $\triangle KBD$ (not drawn) equal to the area of $\triangle ABD$?
+\item Why is the area of $\triangle FBC$ equal to the area of $\triangle FBA$ (not drawn)?
+\item Explain briefly why the area of rectangle $KBDL$ equal to the area of rectangle $FBAG$.
+\item Now explain how to complete the proof of the Pythagorean theorem.  \end{enumerate}
+\end{prob}
+
 
 %\begin{prob}
 %Using the picture below, prove that if two non-vertical lines are perpendicular, the product of their slopes is $-1$.   You may assume that $x$ and $y$ are horizontal and vertical axes, respectively; that lines $j$ and $k$ are perpendicular and that $j$ has positive slope; that the segments of length $a$ and $c$ are vertical and collinear; and that the segment of length $b$ is horizontal.   
