--- a/ParallelsInGeometry/4407-exam.tex
+++ b/ParallelsInGeometry/4407-exam.tex
@@ -61,10 +61,6 @@ why it works.
 %\end{prob}
 
 \begin{prob}
-Prove that the points on an angle bisector are \emph{exactly those} that are equidistant from the sides of the angle. 
-\end{prob}
-
-\begin{prob}
 Construct a $30$-$60$-$90$ right triangle. Explain the steps in your
   construction and how you know it works.
 \end{prob}
@@ -73,6 +69,19 @@ Construct a $30$-$60$-$90$ right triangle. Explain the steps in your
 Construct a $45$-$45$-$90$ right triangle. Explain the steps in your
   construction and how you know it works.
 \end{prob}
+
+\begin{prob}
+Prove that the points on an angle bisector are \emph{exactly those} that are equidistant from the sides of the angle. 
+\end{prob}
+
+\begin{prob} 
+Concurrency of angle bisectors. 
+\begin{enumerate}
+\item For an arbitrary triangle, draw carefully to demonstrated that the angle bisectors of a triangle are concurrent at the incenter.   
+\item Prove that the angle bisectors of a triangle are concurrent.  (Hint:  You may use the result, proved in lecture, that the points on an angle bisector are exactly those that are equidistant from the sides of the angles.)  
+\end{enumerate}
+\end{prob} 
+
 
 \begin{prob}
 Where is the orthocenter of a right triangle?  Explain your reasoning.  What about the circumcenter?  Again, explain your reasoning. 
@@ -195,9 +204,9 @@ Explain how the picture ``proves'' the following statements:
 %If the cup is filled to half its height, what fraction of the cup's volume is filled?  Explain your reasoning.  
 %\end{prob}
 
-\begin{prob}
-Suppose you use a photocopier to enlarge a figure to 125\% of its original size.  What is the scale factor of the enlargement?  What happens to areas under the enlargement?  If you lost the original figure, what reduction percentage would you use on the enlargement to create a figure congruent to the original?  What is the scale factor for the reduction?  
-\end{prob}
+%\begin{prob}
+%Suppose you use a photocopier to enlarge a figure to 125\% of its original size.  What is the scale factor of the enlargement?  What happens to areas under the enlargement?  If you lost the original figure, what reduction percentage would you use on the enlargement to create a figure congruent to the original?  What is the scale factor for the reduction?  
+%\end{prob}
 
 \begin{prob}
 Explain how the following picture ``proves'' the Pythagorean Theorem.
@@ -238,15 +247,15 @@ Explain how the following picture ``proves'' the Pythagorean Theorem.
 Given a figure and a rotation of that figure, find the center and angle of rotation.  
 \end{prob}
 
-\begin{prob}
-In the figure below  $O$ is the center of the circle, $\overline{XY}$ is a diameter, $a = PX$, $b=PY$, and $c=PZ$.  
-$$\includegraphics[scale=0.6]{../graphics/means}$$
-\begin{enumerate}
-\item Show that $c=\sqrt{ab}$.  
-\item Use the figure to explain the Arithmetic-Geometric Mean Inequality: $\frac{a+b}{2} \ge \sqrt{ab}$.  
-%\item Why is this called the Arithmetic-Geometric Mean Inequality?  
-\end{enumerate}
-\end{prob}
+%\begin{prob}
+%In the figure below  $O$ is the center of the circle, $\overline{XY}$ is a diameter, $a = PX$, $b=PY$, and $c=PZ$.  
+%$$\includegraphics[scale=0.6]{../graphics/means}$$
+%\begin{enumerate}
+%\item Show that $c=\sqrt{ab}$.  
+%\item Use the figure to explain the Arithmetic-Geometric Mean Inequality: $\frac{a+b}{2} \ge \sqrt{ab}$.  
+%%\item Why is this called the Arithmetic-Geometric Mean Inequality?  
+%\end{enumerate}
+%\end{prob}
 
 %\begin{prob}
 %If the perimeter of a rectangle is 20 feet, what is the most one can say about the rectangle's area?  If the perimeter of any simple closed 2-dimensional shape is 20 feet, what is the most anyone can say about its area?
@@ -334,43 +343,35 @@ $$\includegraphics[scale=0.6]{../graphics/means}$$
 %Use a general (non-special) triangle to explain why every triangle is a rep-4-tile.  
 %Use the same triangle to explain why every triangle tessellates the plane.  Then use your tessellation to explain why every triangle is a rep-$n^2$-tile for any positive integer $n$. 
 %\end{prob}
+%
+%\begin{prob}
+%Explain how the ASA congruence criterion follows from the definition of congruence in terms of rigid motions. Be sure to indicate, using the two given angles and the included side, why the sequence of rigid motions guarantees triangle congruence.
+%\end{prob}
+%
 
-\begin{prob} 
-Concurrency of angle bisectors. 
-\begin{enumerate}
-\item For an arbitrary triangle, draw carefully to demonstrated that the angle bisectors of a triangle are concurrent at the incenter.   
-\item Prove that the angle bisectors of a triangle are concurrent.  (Hint:  You may use the result, proved in lecture, that the points on an angle bisector are exactly those that are equidistant from the sides of the angles.)  
-\end{enumerate}
-\end{prob} 
-
-\begin{prob}
-Explain how the ASA congruence criterion follows from the definition of congruence in terms of rigid motions. Be sure to indicate, using the two given angles and the included side, why the sequence of rigid motions guarantees triangle congruence.
-\end{prob}
-
-
-\begin{prob}
-Find the intersection of the lines
-\begin{align*}
-x_1(t) &= -6 + 9t & x_2(t) &= 3+t \\
-y_1(t) &= 3-2t &  y_2(t) &= -4-2t 
-\end{align*}
-If $(x_1(t),y_1(t))$ gives the position of $\mathrm{jogger}_1$ and
-$(x_2(t),y_2(t))$ gives the position of $\mathrm{jogger}_2$, what is
-the significance of the point of intersection of these lines, from the
-perspective of the joggers?
-\end{prob}
-
-\begin{prob}
-A bug moves according to the following parametric equations, where t is measured in seconds and $x$ and $y$ are measured in centimeters:  $x = 2t^2$, $y = t-2$.  (Suppose $t$ can be any real number.)   
-\begin{enumerate}
-\item Describe the path of the bug.  
-\item Is the bug's position a function of time?  
-\item On the path, is $y$ a function of $x$?  
-\item Is $x$ a function of $y$?  
-\item If you know one of $x$, $y$, or $t$, can you determine the other two?  How does this question relate to the previous two questions?  
-\item In school mathematics, students are often given a graph and asked, ``Is it a function.''  Explain why this is a poor question.  What better questions could you ask?  
-\end{enumerate}
-\end{prob}
+%\begin{prob}
+%Find the intersection of the lines
+%\begin{align*}
+%x_1(t) &= -6 + 9t & x_2(t) &= 3+t \\
+%y_1(t) &= 3-2t &  y_2(t) &= -4-2t 
+%\end{align*}
+%If $(x_1(t),y_1(t))$ gives the position of $\mathrm{jogger}_1$ and
+%$(x_2(t),y_2(t))$ gives the position of $\mathrm{jogger}_2$, what is
+%the significance of the point of intersection of these lines, from the
+%perspective of the joggers?
+%\end{prob}
+%
+%\begin{prob}
+%A bug moves according to the following parametric equations, where t is measured in seconds and $x$ and $y$ are measured in centimeters:  $x = 2t^2$, $y = t-2$.  (Suppose $t$ can be any real number.)   
+%\begin{enumerate}
+%\item Describe the path of the bug.  
+%\item Is the bug's position a function of time?  
+%\item On the path, is $y$ a function of $x$?  
+%\item Is $x$ a function of $y$?  
+%\item If you know one of $x$, $y$, or $t$, can you determine the other two?  How does this question relate to the previous two questions?  
+%\item In school mathematics, students are often given a graph and asked, ``Is it a function.''  Explain why this is a poor question.  What better questions could you ask?  
+%\end{enumerate}
+%\end{prob}
 
 %%\subsection{Absolute Value, Distance, and City Geometry}
 %\begin{prob}
