--- a/ParallelsInGeometry/teacherEd.sty
+++ b/ParallelsInGeometry/teacherEd.sty
@@ -615,10 +615,10 @@ skipabove=\baselineskip]{warning}%
 % To move up comments, use the optional marginnote parameter [-3\baselineskip].  But this causes multiple notes to overwrite each other.  
 
 \def\standard#1{\textsuperscript{\color{black}\footnotesize{#1}}%
-\marginnote{\def\text##1{\def\thetext{##1}}\input{../../../CCSS/Standards/#1.tex}\noindent CCSS #1: \thetext}}
+\marginnote{\def\text##1{\def\thetext{##1}}\input{../../CCSS/Standards/#1.tex}\noindent CCSS #1: \thetext}}
 
 \def\standardhs#1{\textsuperscript{\color{black}\footnotesize{#1}}%
-\marginnote{\def\text##1{\def\thetext{##1}}\input{../../../CCSS/Standards/9-12.#1.tex}\noindent CCSS #1: \thetext}}
+\marginnote{\def\text##1{\def\thetext{##1}}\input{../../CCSS/Standards/9-12.#1.tex}\noindent CCSS #1: \thetext}}
 
 %\def\document#1{} %% Needed to add standards;  Placed in main document
 
